--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -32,7 +32,7 @@ jobs:
             ~/.cache/go-build
           key: ${{ runner.os }}-go-${{ env.GITHUB_JOB }}-${{ hashFiles('**/go.sum') }}
           restore-keys: |
-            ${{ runner.os }}-go-${{ env.GITHUB_JOB }}
+            ${{ runner.os }}-go-${{ env.GITHUB_JOB }}-${{ hashFiles('**/go.sum') }}
 
       - name: Start containers
         run: .github/scripts/docker-up.sh
@@ -45,3 +45,32 @@ jobs:
       - name: Stop containers
         if: always()
         run: .github/scripts/docker-down.sh
+
+  test-with-testcontainers:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.18.x
+
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Go cache
+        uses: actions/cache@v3
+        with:
+          # In order:
+          # * Module download cache
+          # * Build cache (Linux)
+          path: |
+            ~/go/pkg/mod
+            ~/.cache/go-build
+          key: ${{ runner.os }}-go-${{ env.GITHUB_JOB }}-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-${{ env.GITHUB_JOB }}-${{ hashFiles('**/go.sum') }}
+
+      - name: Test
+        id: test
+        run: |
+          make test-with-testcontainers
