Run testcontainers with multiple mongo versions

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -47,6 +47,10 @@ jobs:
         run: .github/scripts/docker-down.sh
 
   test-with-testcontainers:
+    strategy:
+      fail-fast: false
+      matrix:
+        mongo-version: [ "4.4", "5.0" ]
     runs-on: ubuntu-latest
     steps:
       - name: Install Go
@@ -72,5 +76,7 @@ jobs:
 
       - name: Test
         id: test
+        env:
+          MONGO_VERSION: "${{ matrix.mongo-version }}"
         run: |
           make test-with-testcontainers
