--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,6 +11,10 @@ env:
 
 jobs:
   test-with-docker-compose:
+    strategy:
+      fail-fast: false
+      matrix:
+        mongo-version: [ "4.4", "5.0" ]
     runs-on: ubuntu-latest
     steps:
       - name: Install Go
@@ -35,6 +39,8 @@ jobs:
             ${{ runner.os }}-go-${{ env.GITHUB_JOB }}-${{ hashFiles('**/go.sum') }}
 
       - name: Start containers
+        env:
+          MONGO_VERSION: "${{ matrix.mongo-version }}"
         run: .github/scripts/docker-up.sh
 
       - name: Test
