--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3"
 services:
     mongo:
-        image: mongo:4.4
+        image: mongo:${MONGO_VERSION:-4.4}
         ports:
             - "27017"
         restart: always
