--- a/.github/workflows/test-with-docker-compose.yaml
+++ b/.github/workflows/test-with-docker-compose.yaml
@@ -1,4 +1,4 @@
-name: test
+name: test-with-docker-compose
 
 on:
   push:
@@ -10,7 +10,7 @@ env:
   GO111MODULE: "on"
 
 jobs:
-  test-with-docker-compose:
+  test:
     strategy:
       fail-fast: false
       matrix:
